fix scrollbar layout

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,3 +1,4 @@
 body {
   background-color: var(--dark-0);
+  overflow: hidden;
 }
